// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lint-staged with options should return a config for { language: 'JavaScript' } 1`] = `
Object {
  "*.(js|jsx)": Array [
    "foundry run eslint --fix",
  ],
}
`;

exports[`lint-staged with options should return a config for { language: 'TypeScript' } 1`] = `
Object {
  "*.(js|jsx)": Array [
    "foundry run eslint --fix",
  ],
  "*.(ts|tsx)": [Function],
}
`;

exports[`lint-staged with overrides should override the default config 1`] = `
Object {
  "*.(js|jsx)": Array [
    "foundry run eslint --fix",
  ],
  "*.jsx?": Array [
    "custom command",
  ],
}
`;
